--- a/app/src/main/res/layout/dialog_add_task.xml
+++ b/app/src/main/res/layout/dialog_add_task.xml
@@ -23,61 +23,72 @@
             android:textSize="40dp"
             android:textStyle="bold" />
 
+
         <EditText
+            android:id="@+id/titleTaskAdd"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="85dp"
             android:layout_marginVertical="5dp"
             android:background="@drawable/button_color"
             android:drawableLeft="@drawable/baseline_title_24"
+            android:drawablePadding="20dp"
             android:drawableTint="@color/Bocchi"
-            android:drawablePadding="10dp"
             android:hint="TItle task"
             android:padding="20dp"
+            android:scrollbars="vertical"
+            android:textColor="@color/Bocchi"
             android:textColorHint="@color/Bocchi"
             android:textSize="21sp"
-            android:textStyle="italic" />
+            android:textStyle="bold|italic" />
 
         <EditText
+            android:id="@+id/DecriptionAdd"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="146dp"
             android:layout_marginVertical="5dp"
             android:background="@drawable/button_color"
-            android:drawableLeft="@drawable/baseline_subject_24"
-            android:drawableTint="@color/Bocchi"
             android:drawablePadding="10dp"
-            android:hint="Decription"
+            android:drawableTint="@color/Bocchi"
+            android:gravity="start|center_horizontal"
+            android:hint="Description....."
             android:padding="20dp"
+            android:scrollbars="vertical"
+            android:textColor="@color/Bocchi"
             android:textColorHint="@color/Bocchi"
             android:textSize="21sp"
-            android:textStyle="italic" />
+            android:textStyle="bold|italic" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="horizontal">
 
+
             <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/DateAdd"
+                android:layout_width="282dp"
+                android:layout_height="85dp"
                 android:layout_marginVertical="5dp"
                 android:background="@drawable/button_color"
                 android:drawableLeft="@drawable/baseline_date_range_24"
-                android:drawablePadding="10dp"
+                android:drawablePadding="20dp"
                 android:drawableTint="@color/Bocchi"
-                android:hint=" dd-mm-yyyy hh:mm:ss"
+                android:hint="hh:mm:ss"
                 android:padding="20dp"
+                android:textColor="@color/Bocchi"
                 android:textColorHint="@color/Bocchi"
                 android:textSize="21sp"
-                android:textStyle="italic" />
-
+                android:textStyle="bold|italic" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_gravity="right|center_vertical"
                 android:layout_margin="6dp"
                 app:cardCornerRadius="15dp">
 
                 <ImageView
+                    android:id="@+id/dateButton"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/button_ripple_home"
@@ -87,6 +98,49 @@
                     android:focusable="true"
                     android:padding="10dp"
                     android:src="@drawable/baseline_date_range_24"
+                    app:tint="@color/white" />
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/timeAdd"
+                android:layout_width="282dp"
+                android:layout_height="85dp"
+                android:layout_marginVertical="5dp"
+                android:background="@drawable/button_color"
+                android:drawableLeft="@drawable/baseline_access_time_24"
+                android:drawablePadding="20dp"
+                android:drawableTint="@color/Bocchi"
+                android:hint="dd-mm-yyyy"
+                android:padding="20dp"
+                android:textColor="@color/Bocchi"
+                android:textColorHint="@color/Bocchi"
+                android:textSize="21sp"
+                android:textStyle="bold|italic" />
+
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="6dp"
+                app:cardCornerRadius="15dp">
+
+                <ImageView
+                    android:id="@+id/timeButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/button_ripple_home"
+                    android:backgroundTint="@color/blueBocchi"
+                    android:backgroundTintMode="add"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:padding="10dp"
+                    android:src="@drawable/baseline_access_time_24"
                     app:tint="@color/white" />
             </androidx.cardview.widget.CardView>
         </LinearLayout>
