--- a/app/src/main/res/layout/dialog_detail_task.xml
+++ b/app/src/main/res/layout/dialog_detail_task.xml
@@ -24,8 +24,9 @@
             android:textStyle="bold" />
 
         <EditText
+            android:id="@+id/titleDetail"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="85dp"
             android:layout_marginVertical="5dp"
             android:background="@drawable/button_color"
             android:drawableLeft="@drawable/baseline_title_24"
@@ -34,45 +35,52 @@
             android:editable="false"
             android:hint="TItle task"
             android:padding="20dp"
+            android:scrollbars="vertical"
+            android:textColor="@color/Bocchi"
             android:textColorHint="@color/Bocchi"
             android:textSize="21sp"
-            android:textStyle="italic" />
+            android:textStyle="bold|italic" />
 
         <EditText
+            android:id="@+id/decriptionDetail"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="146dp"
             android:layout_marginVertical="5dp"
             android:background="@drawable/button_color"
-            android:drawableLeft="@drawable/baseline_subject_24"
             android:drawablePadding="10dp"
             android:drawableTint="@color/Bocchi"
             android:editable="false"
+            android:gravity="top"
             android:hint="Decription"
             android:padding="20dp"
+            android:scrollbars="vertical"
+            android:textColor="@color/Bocchi"
             android:textColorHint="@color/Bocchi"
             android:textSize="21sp"
-            android:textStyle="italic" />
+            android:textStyle="bold|italic" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
+
             <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/dateDetail"
+                android:layout_width="282dp"
+                android:layout_height="85dp"
                 android:layout_marginVertical="5dp"
                 android:background="@drawable/button_color"
                 android:drawableLeft="@drawable/baseline_date_range_24"
                 android:drawablePadding="10dp"
                 android:drawableTint="@color/Bocchi"
                 android:editable="false"
-                android:hint=" dd-mm-yyyy hh:mm:ss"
+                android:hint=" dd-mm-yyyy"
                 android:padding="20dp"
+                android:textColor="@color/Bocchi"
                 android:textColorHint="@color/Bocchi"
                 android:textSize="21sp"
-                android:textStyle="italic" />
-
+                android:textStyle="bold|italic" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -81,6 +89,7 @@
                 app:cardCornerRadius="15dp">
 
                 <ImageView
+                    android:id="@+id/dateButton"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/button_ripple_home"
@@ -96,6 +105,50 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/timeDetail"
+                android:layout_width="282dp"
+                android:layout_height="85dp"
+                android:layout_marginVertical="5dp"
+                android:background="@drawable/button_color"
+                android:drawableLeft="@drawable/baseline_access_time_24"
+                android:drawablePadding="20dp"
+                android:drawableTint="@color/Bocchi"
+                android:hint="hh:mm:ss"
+                android:padding="20dp"
+                android:textColor="@color/Bocchi"
+                android:textColorHint="@color/Bocchi"
+                android:textSize="21sp"
+                android:textStyle="bold|italic" />
+
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="right|center_vertical"
+                android:layout_margin="6dp"
+                app:cardCornerRadius="15dp">
+
+                <ImageView
+                    android:id="@+id/TimeButtonDetail"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/button_ripple_home"
+                    android:backgroundTint="@color/blueBocchi"
+                    android:backgroundTintMode="add"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:padding="10dp"
+                    android:src="@drawable/baseline_access_time_24"
+                    app:tint="@color/white" />
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
@@ -103,15 +156,30 @@
 
 
             <Button
-                android:id="@+id/btnCancelEdit"
+                android:id="@+id/btnDone"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="15dp"
                 android:layout_marginVertical="10dp"
-                android:backgroundTint="@color/YellowBocchi"
+                android:backgroundTint="@color/blueBocchi"
                 android:paddingHorizontal="35dp"
                 android:paddingVertical="15dp"
                 android:text="Ok"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/btnCancelDetail"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="15dp"
+                android:layout_marginVertical="10dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/YellowBocchi"
+                android:paddingHorizontal="35dp"
+                android:paddingVertical="15dp"
+                android:text="Cancel"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold" />
