--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main_home"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Home">
+    tools:context=".Fragments.Home">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,49 +20,6 @@
             android:layout_gravity="center_horizontal"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:padding="10dp">
-
-                <EditText
-                    android:layout_width="300dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="20dp"
-                    android:background="@drawable/border_radius"
-                    android:drawableLeft="@drawable/baseline_search_24"
-                    android:drawableTint="@color/Bocchi"
-                    android:hint="  Search here.."
-                    android:padding="12dp"
-                    android:paddingStart="15dp"
-                    android:textColorHint="@color/Bocchi"
-                    android:textSize="21sp"
-                    android:textStyle="italic" />
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:cardCornerRadius="15dp">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/button_ripple_home"
-                        android:backgroundTint="@color/blueBocchi"
-                        android:backgroundTintMode="add"
-                        android:clickable="true"
-                        android:focusable="true"
-                        android:padding="10dp"
-                        android:src="@drawable/baseline_apps_24"
-                        app:tint="@color/white" />
-                </androidx.cardview.widget.CardView>
-
-
-
-            </LinearLayout>
-
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycle_view"
                 android:layout_width="wrap_content"
@@ -73,43 +30,40 @@
 
         </LinearLayout>
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="bottom|end"
-            android:backgroundTint="#A29D9D">
+            android:background="@drawable/background_radius_top_white"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:paddingStart="14dp"
+            android:paddingLeft="14dp"
+            android:paddingTop="14dp"
+            android:paddingEnd="14dp"
+            android:paddingRight="14dp"
+            android:paddingBottom="0dp">
 
-            <LinearLayout
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tabs_check"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@color/white"
+                android:hapticFeedbackEnabled="false"
+                app:tabGravity="center">
+
+
+            </com.google.android.material.tabs.TabLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycle_view_task"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_alignParentBottom="false"
-                android:background="@drawable/background_radius_top_white"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:paddingStart="14dp"
-                android:paddingLeft="14dp"
-                android:paddingTop="14dp"
-                android:paddingEnd="14dp"
-                android:paddingRight="14dp"
-                android:paddingBottom="0dp">
+                android:visibility="visible" />
 
+        </LinearLayout>
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recycle_view_task"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:visibility="visible" />
-
-            </LinearLayout>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_margin="12dp"
-                app:cardCornerRadius="50dp"/>
-        </RelativeLayout>
     </LinearLayout>
 
 </FrameLayout>
