--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,8 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WeatherForecast">
-
+    tools:context=".Model.WeatherForecast">
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -26,12 +28,12 @@
                 android:background="@drawable/border_radius"
                 android:drawableLeft="@drawable/baseline_search_24"
                 android:drawablePadding="10dp"
-                android:drawableTint="@color/blueBocchi"
+                android:drawableTint="@color/Bocchi"
                 android:hint="Search here.."
                 android:padding="12dp"
                 android:paddingStart="15dp"
-                android:textColor="@color/blueBocchi"
-                android:textColorHint="@color/blueBocchi"
+                android:textColor="@color/Bocchi"
+                android:textColorHint="@color/Bocchi"
                 android:textSize="21sp"
                 android:textStyle="italic" />
 
@@ -45,7 +47,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/button_ripple_home"
-                    android:backgroundTint="@color/blueBocchi"
+                    android:backgroundTint="@color/Bocchi"
                     android:backgroundTintMode="add"
                     android:clickable="true"
                     android:focusable="true"
@@ -81,6 +83,15 @@
                     android:text="Việt Nam"
                     android:textSize="48sp"
                     android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/provideTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Provide"
+                    android:textSize="20sp"
+                    android:textStyle="bold|italic" />
 
                 <ImageView
                     android:id="@+id/imgWeather"
@@ -184,18 +195,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             app:cardCornerRadius="15dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:orientation="vertical"
-                android:padding="30dp">
+                android:orientation="vertical">
 
 
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerView_weather"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:padding="10dp" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
@@ -218,5 +234,6 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
+</ScrollView>
 
 </FrameLayout>
